# slack-benchy

./: .dockerignore  .env.example  .gitignore  .release-please-config.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  prusa-slack-bot-architecture.md  pyproject.toml  slack-app-manifest.yaml
.github/workflows/: ci.yml  release.yml
nix/: module.nix
src/prusa_slack_bot/: __main__.py  config.py  prusalink.py  single_instance.py  status_message.py  transitions.py
src/slack_benchy/: __main__.py  config.py  db.py  logging_setup.py  poller.py  prusalink.py  sanitize.py  single_instance.py  slack_app.py  status_message.py  transitions.py
systemd/: prusa-slack-bot.service  slack-benchy.service
tests/: test_config.py  test_db.py  test_logging_redaction.py  test_poller.py  test_prusalink.py  test_sanitize.py  test_single_instance.py  test_status_message.py  test_transitions.py
