[project]
name = "prusa-slack-bot"
version = "0.1.0"
description = "Slack bot that surfaces a Prusa 3D printer in Slack via Socket Mode and PrusaLink."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "prusa-slack-bot contributors" }]
keywords = ["slack", "prusa", "prusalink", "3d-printing", "bot"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Printing",
]
dependencies = [
    "slack-bolt>=1.21",
    "slack-sdk>=3.33",
    "aiohttp>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[project.scripts]
prusa-slack-bot = "prusa_slack_bot.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/prusa-slack-bot"
Issues = "https://github.com/your-org/prusa-slack-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prusa_slack_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
